2005-03-17  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkmodule.c (init_gtk): Regression, don't crash if sys.argv
	isn't set.

2005-03-16  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_radiobutton.py (RadioButtonTest): New test.

	* tests: Renamed *.py to test_*.py

	* gtk/gtk.override: Allow argument to RadioButtion.set_radio_group 
	to be empty, fixes #170514 (Lorenzo Gil Sanchez)

2005-03-15  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== PyGTK 2.6.1 ===
2005-03-15  Johan Dahlin  <jdahlin@async.com.br>

	* codegen/codegen.py: Check arguments if we have no arguments.
	Fixes bug #170266 (Doug Quale)

	* gtk/gdk.override:
	* gtk/gtktreeview.override: gcc4 patches stolen from redhat

	* NEWS: Updated
	
2005-03-14  Anders Carlsson  <andersca@imendio.com>

	* codegen/reversewrapper.py:
	Remove an extra * in the declaration and cast of GObject 
	types.
	
2005-03-14  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygparamspec.c (pyg_param_spec_getattr): In case the
	enum is not registered, set enum_class or flag_class to None

2005-03-13  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtktreeview.override (_wrap_gtk_tree_store_reorder): Ditto

2005-03-13  Richard Hult  <richard@imendio.com>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_reorder): You
	don't own a ref on the return value from PyList_GetItem so don't
	decrease the ref count.

2005-03-10  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtktreeview.override:
	(_wrap_gtk_list_store_insert): Use
	gtk_list_store_insert_with_valuesv, improves performance
	when using a sorted list.

	* configure.in: Post release version bump

=== PyGTK 2.6.0 ===
2005-03-07  Johan Dahlin  <jdahlin@async.com.br>

	* README: Remove ftp.gtk.org url
	
	* NEWS: Updated.

2005-03-04  Manish Singh  <yosh@gimp.org>

	* configure.in: document micro_version as micro version.

	* gtk/gtktreeview.override
	* gtk/libglade.override: get rid of a couple unnecessary G_OBJECT()
	casts.
