@@ -1310,10 +1310,10 @@ _wrap_gtk_list_store_insert(PyGObject *self, PyObject *args, PyObject *kwargs)
     static char *kwlist[] = { "position", "row", NULL };
     GtkTreeIter iter;
     gint position;
-    PyObject *items = Py_None;
-    gint n_columns;
-    gint *columns;
-    GValue *values;
+    PyObject *items = NULL;
+    gint n_columns = 0;
+    gint *columns = NULL;
+    GValue *values = NULL;
     gint i;
 
     if (!PyArg_ParseTupleAndKeywords(args, kwargs, "i|O:GtkListStore.insert",
@@ -1321,15 +1321,17 @@ _wrap_gtk_list_store_insert(PyGObject *self, PyObject *args, PyObject *kwargs)
         return NULL;
     }
 
-    if (!PySequence_Check(items)) {
-	PyErr_SetString(PyExc_TypeError, "expecting a sequence");
-	return NULL;
-    }
-    
-    n_columns = gtk_tree_model_get_n_columns(GTK_TREE_MODEL(self->obj));
-    if (PySequence_Length(items) != n_columns) {
-	PyErr_SetString(PyExc_ValueError, "row sequence has wrong length");
-	return NULL;
+    if (items) {
+	if (!PySequence_Check(items)) {
+	    PyErr_SetString(PyExc_TypeError, "expecting a sequence");
+	    return NULL;
+	}
+	
+	n_columns = gtk_tree_model_get_n_columns(GTK_TREE_MODEL(self->obj));
+	if (PySequence_Length(items) != n_columns) {
+	    PyErr_SetString(PyExc_ValueError, "row sequence has wrong length");
+	    return NULL;
+	}
     }
 
     columns = g_new0(gint, n_columns);
@@ -1363,9 +1365,11 @@ _wrap_gtk_list_store_insert(PyGObject *self, PyObject *args, PyObject *kwargs)
     for (i = 0; i < n_columns; i++) {
 	g_value_unset(&values[i]);
     }
-    g_free(values);
-    g_free(columns);
-    
+    if (values)
+	g_free(values);
+    if (columns)
+	g_free(columns);
+
     return pyg_boxed_new(GTK_TYPE_TREE_ITER, &iter, TRUE, TRUE);
 }
 %%
