@@ -1,3 +1,11 @@
+2005-03-20  Johan Dahlin  <johan@gnome.org>
+
+	* gtk/gtktreeview.override (_wrap_gtk_list_store_insert):
+	Regression, allow the second argument to be unspecified, fixes
+	#171027 (Ulrik Svensson)
+
+	* tests/test_liststore.py: Add 2 new tests
+
 2005-03-17  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/gtkmodule.c (init_gtk): Regression, don't crash if sys.argv
